contact card overflow issue solved, example links replaced with, title in hero section has been resized but till skills are not visible

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,8 +12,8 @@
     gap: 10px;
 }
 
-.text h2{
-    font-size: 78px;
+.text h1{
+    font-size: 60px;
     font-weight: 700;
     letter-spacing: 4px;
 }
@@ -34,6 +34,7 @@
 .link{
     display: flex;
     align-items: center;
+    /* justify-content: space-evenly; */
     gap: 25px;
 }
 
@@ -57,10 +58,23 @@
         align-items: center;
     }
 
-    .links{
-    align-items: flex-start;
+    .text h1{
+        font-size: 40px;
     }
-    .links a{
-        font-size: 4vw;
+    .text p{
+        font-size: 20px;
+    }
+
+    .link{
+        justify-content: space-around;
+        gap:10px;
+    
+    }
+    .link a{
+        font-size: 5vw;
+    }
+    
+    .link img{
+        width: 8vw;
     }
 }
