--- a/src/components/Project/Projects.module.css
+++ b/src/components/Project/Projects.module.css
@@ -21,5 +21,5 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
-    width: 100%;
+    width: 100%
 }
